--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ Gemfile
 Gemfile.lock
 vendor
 .DS_Store
+fieldwork.bbprojectd/Scratchpad.txt
+fieldwork.bbprojectd/paradia.bbprojectsettings
+fieldwork.bbprojectd/project.bbprojectdata
+fieldwork.bbprojectd/Unix Worksheet.worksheet
