--- a/_data/employers.yml
+++ b/_data/employers.yml
@@ -1,166 +1,500 @@
-- employerName: Dreammind Group
-  url: "https://dreammind.com"
-- employerName: Das Studio Designs
-  url: "https://dasstudio.ca"
-- employerName: Maple
+#- employerName: ""
+#   url: ""
+#   person: ""
+#   email: ""
+#   year: ""
+- employerName: "Hydro Ottawa"
+  url: "https://hydroottawa.com"
+  person: "Daniel Séguin"
+  email: "danseguin@hydroottawa.com"
+  year: ""
+- employerName: "Aerographics"
+  url: "https://www.aerographics.ca"
+  person: "Dave O’Malley"
+  email: "domalley@aerographics.ca"
+  year: ""
+- employerName: "Canadian Gas Association"
+  url: "https://cga.ca"
+  person: "Emily Copp"
+  email: "info@cga.ca"
+  year: "2023"
+- employerName: "Canadian Paint and Coatings Association"
+  url: "https://canpaint.com"
+  person: "Melanie Di Tullio"
+  email: "mditullio@canpaint.com"
+  year: "2023"
+- employerName: "EDealer"
+  url: "https://www.edealer.ca/"
+  person: "Jenn Hall"
+  email: "jenn.hall@edealer.ca"
+  year: "2023"
+- employerName: "Gooseberry Collective"
+  url: "https://gooseberrycollective.ca/"
+  person: "Marie Scharfe"
+  email: "marie@gooseberrycollective.com"
+  year: "2023"
+- employerName: "Rebel.com"
+  url: "https://rebel.com"
+  person: "Dean Cole"
+  email: "dean.cole@rebel.com"
+  year: "2023"
+- employerName: "Martello Technologies"
+  url: "https://martellotech.com"
+  person: "Amanda Griebeler"
+  email: "agriebeler@martellotech.com"
+  year: "2023"
+- employerName: "SIU Urology"
+  url: "https://www.siu-urology.org"
+  person: "Sarah Campeau"
+  email: "sarah.campeau@siu-urology.org"
+  year: "2023"
+- employerName: "Grow Maple"
   url: "https://growmaple.com"
-- employerName: Pixel Dreams
+  person: "Joel Grenier"
+  email: "joel.grenier@growmaple.com"
+  year: 
+- employerName: "Service Learning in Design & Engineering (SLiDE)"
+  url: "https://www.slidelab7.ca/"
+  person: "Keith Holmes"
+  email: "holmesk@algonquincollege.com"
+  year: ""
+- employerName: "GreenRe"
+  url: "https://greenre.ca/"
+  person: "Keith Loiselle"
+  email: "keith@greenre.eco"
+  year: "2023"
+- employerName: "Experiential Learning and Innovation Division, Algonquin College"
+  url: "http://www.algonquincollege.com/arie/eli"
+  person: "Matthew Jerabek"
+  email: "jerabem@algonquincollege.com"
+  year: "2023"
+- employerName: "Export Development Canada (EDC)"
+  url: "https://edc.ca"
+  person: "Chrys Moll"
+  email: "cmoll@edc.ca"
+  year: "2023"
+- employerName: "Arcfield Canada Corp."
+  url: "https://arcfield.ca"
+  person: "Marie Darling"
+  email: "mdarling@arcfield.ca"
+  year: "2023"
+- employerName: "Canadian Association of Defence and Security Industries"
+  url: "https://www.defenceandsecurity.ca"
+  person: "Victoria Doak"
+  email: "victoria@defenceandsecurity.ca"
+  year: "2023"
+- employerName: "Big Red Oak"
+  url: "https://bigredoak.com"
+  person: "Stephanie Brown"
+  email: "stephanie@bigredoak.com"
+  year: "2022"
+- employerName: "Phantom Productions"
+  url: "https://phantomproductions.com/"
+  person: "Chris Roussakis"
+  email: "chris@phantomproductions.com"
+  year: "2023"
+- employerName: "Solink Corporation"
+  url: "https://solink.com"
+  person: "Shauna White"
+  email: "swhite@solinkcorp.com"
+  year: "2022"
+- employerName: "Character Creative"
+  url: "https://charactercreative.com"
+  person: "Jamie McLennan"
+  email: "jamie@charactercreative.com"
+  year: "2022"
+- employerName: "Victory Media"
+  url: "https://victorymedia.ca"
+  person: "Kelcey Hamilton"
+  email: "kelcey@victorymedia.ca"
+  year: "2022"
+- employerName: "Social Sense Media"
+  url: "https://www.socialsensemedia.ca"
+  person: ""
+  email: ""
+  year: "2022"
+- employerName: "Xquisit Communications"
+  url: "https://www.xquisit.ca"
+  person: ""
+  email: ""
+  year: "2022"
+- employerName: "One Fish Creative"
+  url: "http://onefishcreative.ca/"
+  person: "Amanda Spencer"
+  email: "amanda@onefishcreative.ca"
+  year: "2022"
+- employerName: "Nioma Studio"
+  url: "https://niomastudio.com/about/"
+  person: "Katie Bourque"
+  email: "hello@niomastudio.com"
+  year: "2022"
+- employerName: "Bold Lip"
+  url: "https://boldlip.ca"
+  person: "Taralyn Carver"
+  email: "taralyn@boldlip.ca"
+  year: "2023"
+- employerName: "CPCS Transcom Ltd."
+  url: "http://www.cpcs.ca/"
+  person: "Angela Chaloub"
+  email: "achalhoub@cpcs.ca"
+  year: "2022"
+- employerName: "Cyan Solutions"
+  url: "http://cyansolutions.com/"
+  person: "Melanie Burgess"
+  email: "melanie@cyansolutions.com"
+  year: "2022"
+- employerName: "SEOPlus"
+  url: "https://seoplus.com/"
+  person: "Andrew Newby"
+  email: "andrew@seoplus.com"
+  year: "2022"
+- employerName: "Creative TRND"
+  url: "https://www.creativetrnd.com/"
+  person: "Jeremie Deschenes"
+  email: "jeremie@creativetrnd.com"
+  year: 
+- employerName: "EmDash (was MediaStyle)"
+  url: "https://emdashagency.ca"
+  person: ""
+  email: ""
+  year: "2023"
+- employerName: "HumanContact Inc."
+  url: "https://humancontact.com"
+  person: "Todd Shannon"
+  email: "todd@humancontact.com"
+  year: "2022"
+- employerName: "Noibu"
+  url: "https://noibu.com"
+  person: "Sean Brady"
+  email: "sean.brady@noibu.com"
+  year: 
+- employerName: "Dreammind Group"
+  url: "https://dreammind.com"
+  person: 
+  email: 
+  year: 
+- employerName: "Das Studio Designs"
+  url: "https://dasstudio.ca"
+  person: 
+  email: 
+  year: 
+- employerName: "Pixel Dreams"
   url: "https://pixeldreams.com"
-- employerName: Greenmelon Inc
+  year: 
+- employerName: "Greenmelon Inc"
   url: "https://greenmeloninc.com"
-- employerName: Xactly Design & Advertising Inc.
+  person: 
+  email: 
+  year: "2022"
+- employerName: "Xactly Design & Advertising Inc."
   url: "https://www.xactlydesign.com"
-- employerName: Feather Company
+  year: 
+- employerName: "Feather Company"
   url: "https://feather.com"
-- employerName: Pointer Creative
+  person: 
+  email: 
+  year: "2021"
+- employerName: "Pointer Creative"
   url: "https://pointercreative.com"
-- employerName: IKEA Ottawa
+  year: 
+- employerName: "IKEA Ottawa"
   url: "https://ikea.ca"
-- employerName: Youth Ottawa
+  person: 
+  email: 
+  year: 
+- employerName: "Youth Ottawa"
   url: "https://youthottawa.ca"
-- employerName: Victory Arts
+  year: 
+- employerName: "Victory Arts"
   url: "https://victoryarts.com"
-- employerName: Canadian Electricity Association (The)
+  person: 
+  email: 
+  year: "2022"
+- employerName: "Canadian Electricity Association (The)"
   url: "https://electricity.ca"
-- employerName: Ross Video, Production Technology Experts
+  person: "Pat Farley"
+  year: 
+- employerName: "Ross Video, Production Technology Experts"
   url: "https://rossvideo.com"
-- employerName: You.i TV
+  person: "Brian Laperle"
+  email: "blaperle@rossvideo.com"
+  year: "2021"
+- employerName: "You.i TV"
   url: "https://www.youi.tv"
-- employerName: Redbox + Makejoy
+  year: 
+- employerName: "Redbox + Makejoy"
   url: "https://www.redboxcreative.com"
-- employerName: Downtown Rideau Business Improvement Area (DRBIA)
+  person: 
+  email: 
+  year: 
+- employerName: "Downtown Rideau Business Improvement Area"
   url: "https://www.downtownrideau.com"
-- employerName: Cloud in the Sky Studios
+  year: 
+- employerName: "Cloud in the Sky Studios"
   url: "https://cloudintheskystudios.com"
-- employerName: Ottawa Senators
+  person: 
+  email: 
+  year: 
+- employerName: "Ottawa Senators"
   url: "https://nhl.com/senators"
-- employerName: NUSKU
+  year: 
+- employerName: "NUSKU"
   url: "https://nusku.ca"
-- employerName: B MEDIA SHOP
+  person: 
+  email: 
+  year: 
+- employerName: "B MEDIA SHOP"
   url: "https://bmediashop.com"
-- employerName: United Way East Ontario
+  person: "Véronique Soucy"
+  email: "vero@bmediashop.com"
+  year: "2022"
+- employerName: "United Way East Ontario"
   url: "https://unitedwayeo.ca"
-- employerName: Great River Media
+  person: 
+  email: 
+  year: 
+- employerName: "Great River Media"
   url: "https://greatriver.ca"
-- employerName: McMillan
+  year: "2022"
+  person: 
+  email: 
+- employerName: "McMillan"
   url: "https://www.mcmillan.com"
-- employerName: Canadian Institute for Health Information
+  person: 
+  email: 
+  year: 
+- employerName: "Canadian Institute for Health Information"
   url: "https://www.cihi.ca"
-- employerName: Fellow.app
+  year: 
+- employerName: "Fellow.app"
   url: "https://fellow.app"
-- employerName: Greenre Brand
-  url: "https://greenre.ca"
-- employerName: Banfield Agency
+  person: 
+  email: 
+  year: 
+- employerName: "Banfield Agency"
   url: "https://banfield.agency"
-- employerName: Canadian Blood Services
+  person: "Timothy Jones"
+  email: "tjones@banfield.agency"
+  year: "2020"
+- employerName: "Canadian Blood Services"
   url: "https://blood.ca"
-- employerName: Impact Hub Ottawa
+  year: 
+- employerName: "Impact Hub Ottawa"
   url: "https://hubottawa.org"
-- employerName: Canada Revenue Agency
+  person: 
+  email: 
+  year: 
+- employerName: "Canada Revenue Agency"
   url: "https://cra-arc.gc.ca"
-- employerName: Correctional Service Canada
+  person: "Linda Watson"
+  email: "Linda.Watson@cra-arc.gc.ca"
+  year: "2022"
+- employerName: "Correctional Service Canada"
   url: "https://csc-scc.gc.ca"
-- employerName: Raised by Wolves
+  person: 
+  email: 
+  year: 
+- employerName: "Raised by Wolves"
   url: "https://raisedbywolves.ca"
-- employerName: Acart Communications
+  year: 
+- employerName: "Acart Communications"
   url: "https://acart.com"
-- employerName: Alphabet Creative
+  person: 
+  email: 
+  year: 
+- employerName: "Alphabet Creative"
   url: "https://alphabetcreative.com"
-- employerName: Blackiron Agency
+  year: 
+- employerName: "Blackiron Agency"
   url: "https://blackiron.agency"
-- employerName: Canadian Chambre of Commerce
+  person: "Steve Bowker"
+  email: "steve@blackiron.agency"
+  year: 
+- employerName: "Canadian Chambre of Commerce"
   url: "https://chamber.ca"
-- employerName: Canopy Growth Corporation
-  url: "https://canopygrowth.com"
-- employerName: Elite Printing & Design Inc.
+  year: 
+- employerName: "Elite Printing & Design Inc."
   url: "https://www.eliteprintdesign.com"
-- employerName: Gadar Promotions
+  person: 
+  email: 
+  year: 
+- employerName: "Gadar Promotions"
   url: "https://gadar.ca"
-- employerName: Inner Revolution
+  year: 
+- employerName: "Inner Revolution"
   url: "https://innerrevolution.ca"
-- employerName: Launchfire Interactive Inc.
+  person: 
+  email: 
+  year: 
+- employerName: "Launchfire Interactive Inc."
   url: "https://launchfire.com"
-- employerName: Macadamian
+  year: 
+- employerName: "Macadamian"
   url: "https://macadamian.com"
-- employerName: Scouts Canada
+  person: 
+  email: 
+  year: 
+- employerName: "Scouts Canada"
   url: "https://scouts.ca"
-- employerName: Shoebox Audiometry, a division of Clearwater Clinical
+  year: 
+- employerName: "Shoebox Audiometry, a division of Clearwater Clinical"
   url: "https://clearwaterclinical.com"
-- employerName: Spark Advocacy
-  url: "https://sparkadvocacy.com"
-- employerName: Canadian Maker (The)
+  person: 
+  email: 
+  year: 
+- employerName: "Spark Advocacy"
+  url: "https://sparkadvocacy.ca/"
+  person: "Adrian Jean"
+  year: "2022"
+- employerName: "Canadian Maker (The)"
   url: "https://TheCanadianMaker.com"
-- employerName: Royal Ottawa Foundation (The)
+  person: 
+  email: 
+  year: 
+- employerName: "Royal Ottawa Foundation (The)"
   url: "https://theroyal.ca"
-- employerName: Simple Story Videos
+  year: "2022"
+- employerName: "Simple Story Videos"
   url: "https://simplestoryvideos.com"
-- employerName: Soshal
+  person: 
+  email: 
+  year: 
+- employerName: "Soshal"
   url: "https://Soshal.ca"
-- employerName: Cayenne Creative
+  year: 
+- employerName: "Cayenne Creative"
   url: "https://cayennecreative.ca"
-- employerName: Birddog Design
+  person: "Carl Poirier"
+  email: "carl@cayennecreative.ca"
+  year: "2020"
+- employerName: "Birddog Design"
   url: "https://birddogdesign.com"
-- employerName: Spruce Creative Inc.
+  person: "Lissa Constantine"
+  email: "lissa@birddogdesign.com"
+  year: 
+- employerName: "Spruce Creative Inc."
   url: "https://www.sprucecreative.ca"
-- employerName: Cyan Solutions
-  url: "https://cyansolutions.com"
-- employerName: Health Standards Organization
+  person: 
+  email: 
+  year: "2021"
+- employerName: "Health Standards Organization"
   url: "https://healthstandards.org"
-- employerName: Karma Dharma
+  person: 
+  email: 
+  year: 
+- employerName: "Karma Dharma"
   url: "https://karmadharma.ca"
-- employerName: Savvy Company
+  person: 
+  email: 
+  year: 
+- employerName: "Savvy Company"
   url: "https://savvycompany.com"
-- employerName: Architecture49
+  year: 
+- employerName: "Architecture49"
   url: "https://architecture49.com"
-- employerName: EDealer
-  url: "https://www.edealer.ca"
-- employerName: Immigration, Refugees and Citizenship Canada
+  person: 
+  email: 
+  year: 
+- employerName: "Immigration, Refugees and Citizenship Canada"
   url: "http://www.cic.gc.ca"
-- employerName: Fresh Air Educators
+  person: 
+  email: 
+  year: 
+- employerName: "Fresh Air Educators"
   url: "https://www.freshaireducators.com"
-- employerName: Royal Ottawa Mental Health Centre
+  year: 
+- employerName: "Royal Ottawa Mental Health Centre"
   url: "https://theroyal.ca"
-- employerName: Ideal Protein
+  person: 
+  email: 
+  year: 
+- employerName: "Ideal Protein"
   url: "https://www.idealprotein.com"
-- employerName: NyRAD Inc.
+  person: 
+  email: 
+  year: 
+- employerName: "NyRAD Inc."
   url: "https://www.nyrad.ca"
-- employerName: Crave Public Relations
+  person: 
+  email: 
+  year: 
+- employerName: "Crave Public Relations"
   url: "https://www.cravepr.com"
-- employerName: InfoCraft Inc. Marketing Group
+  person: 
+  email: 
+  year: 
+- employerName: "InfoCraft Inc. Marketing Group"
   url: "https://infocraftinc.com"
-- employerName: Sprig Learning
+  person: 
+  email: 
+  year: 
+- employerName: "Sprig Learning"
   url: "https://learnwithsprig.com"
-- employerName: Canadian Army
+  person: 
+  email: 
+  year: 
+- employerName: "Canadian Army"
   url: "http://www.army.gc.ca"
-- employerName: AN Design Communications inc.
+  person: 
+  email: 
+  year: 
+- employerName: "AN Design Communications inc."
   url: "https://www.an-design.ca"
-- employerName: Status of Women Canada
+  person: "Elaine Nadeau"
+  email: "elaine@an-design.ca"
+  year: "2021"
+- employerName: "Status of Women Canada"
   url: "https://www.swc-cfc.gc.ca"
-- employerName: IMI - A Global People Company
+  person: 
+  email: 
+  year: 
+- employerName: "IMI - A Global People Company"
   url: "https://imilogistics.com"
-- employerName: Canadian Geographic Enterprises
-  url: "https://canadiangeographic.ca"
-- employerName: Colleges And Institutes Canada
+  year: 
+- employerName: "Colleges And Institutes Canada"
   url: "https://collegesinstitutes.ca"
-- employerName: Gilmore Marketing
+  year: 
+- employerName: "Gilmore Marketing"
   url: "https://gilmore.ca"
-- employerName: Ottawa Public Health - City Of Ottawa
+  person: 
+  email: 
+  year: 
+- employerName: "Ottawa Public Health - City Of Ottawa"
   url: "https://OttawaPublicHealth.ca"
-- employerName: NOKIA
+  year: 
+- employerName: "NOKIA"
   url: "https://ray.canton@nokia.com"
-- employerName: BAUGRUN DESIGN BUILD
+  person: 
+  email: 
+  year: 
+- employerName: "BAUGRUN DESIGN BUILD"
   url: "https://www.baugrun.com"
-- employerName: Win Translation
+  year: 
+- employerName: "Win Translation"
   url: "https://www.wintranslation.com"
-- employerName: Nesta
+  person: 
+  email: 
+  year: 
+- employerName: "Nesta"
   url: "https://nesta.co"
-- employerName: Synacor
+  year: 
+- employerName: "Synacor"
   url: "https://synacor.com"
-- employerName: Canadian Gas Association (The)
-  url: "https://www.cga.ca"
-- employerName: Clever Print
+  person: 
+  email: 
+  year: 
+- employerName: "Clever Print"
   url: "https://beclever.ca"
-- employerName: Doublenaut
+  person: 
+  email: 
+  year: 
+- employerName: "Doublenaut"
   url: "http://doublenaut.com"
-- employerName: HealthCraft Products Inc.
+  person: 
+  email: 
+  year: 
+- employerName: "HealthCraft Products Inc."
   url: "https://healthcraftproducts.com"
+  person: 
+  email: 
+  year: 
